# bifrost

./: .gitignore  ISA.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
bifrost/: __init__.py  __main__.py  cli.py  db.py  handler.py  logging_config.py  picker.py  platform.py  platform_base.py  platform_macos.py  platform_windows.py  rules.py  security.py  tray.py
doc/: mythology.md
icons/: bifrost.icns
